--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <li>chilli</li>
         <li>garlic</li>
         <li>ginger</li>
+        <li>banana</li>
+        <li>apple</li>
     </ul>
 </body>
 </html>
