--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <h1>This is our first github class</h1>
 
     <ul>
+
+        <div>
+            <h1>This is from Developer branch</h1>
+            <ul>
+                <li>strawberry</li>
+                <li>mango</li>
+            </ul>
+
+        </div>
         <li>chilli</li>
         <li>garlic</li>
         <li>ginger</li>
